--- a/components/Generic/Gradient/gradient.module.scss
+++ b/components/Generic/Gradient/gradient.module.scss
@@ -12,5 +12,6 @@
 .wrapper.light {
   // filter: grayscale(100%);
   // opacity: 0.35;
+  opacity: .4;
   filter: invert(77%) sepia(35%) saturate(294%) hue-rotate(190deg) brightness(103%) contrast(102%);
 }
