--- a/components/Home/App/app.module.scss
+++ b/components/Home/App/app.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   padding-top: 8rem;
   padding-bottom: 16rem;
-  background-image: linear-gradient(rgba($color: $ln-blue, $alpha: 0.2), transparent 30%);
+  // background-image: linear-gradient(rgba($color: $ln-blue, $alpha: 0.2), transparent 30%);
   // padding-top: 12rem;
   // padding-bottom: 8vw;
   // background-image:
